--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 JWT_SECRET="secret"
-CONNECT_DB="postgresql://postgres:root@localhost:5434/dbstore"
+CONNECT_DB="postgres://postgres:root@localhost:5434/dbstore"
