--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-JWT_SECRET="secret"
 CONNECT_DB="postgres://postgres:root@localhost:5434/dbstore"
+AUTH_SECRET="bsQjYpTxJWqbg+JeWkwcZDbKpKe5S+17KD9OZVv3wX0=" # Added by `npx auth`. Read more: https://cli.authjs.dev
